--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <hr>
 
 <ul>
-<li>Webhost (hosting repo) - <a href="utyfilms.github.io/webhost">utyfilms.github.io/webhost</a>
+<li>Webhost (hosting repo) - <a href="/webhost">utyfilms.github.io/webhost</a>
 </li>
 </ul>
       </section>
