--- a/404.html
+++ b/404.html
@@ -27,8 +27,8 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>404 - Not Found</h1>
-            <h2>Portal Page</h2>
+            <h1>Error 404 - Not Found</h1>
+            <h2>Help me!</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
@@ -46,7 +46,7 @@
 
       <section id="main_content">
         <h3>
-<a name="welcome-to-uty-films-on-github" class="anchor" href="#welcome-to-uty-films-on-github"><span class="octicon octicon-link"></span></a>Welcome to UTY Films on Github</h3>
+<a name="welcome-to-uty-films-on-github" class="anchor" href="#welcome-to-uty-films-on-github"><span class="octicon octicon-link"></span></a>Uh oh!</h3>
 
 <li>My resource couldn't be found or isn't available. I'm lost. <a href="https://utyfilms.github.io">Take me home!</a>
 </li>
